fixes nav on small mobile

--- a/css/style.css
+++ b/css/style.css
@@ -457,15 +457,16 @@ p.pub a, p.pub a:link, p.pub a:visited {
 nav.topnav { 
   background-image: var(--gradient);
   /* background-color: var(--deep); */
-  height: var(--height);
+  min-height: var(--height);
   padding: 0 2vw;
   position: fixed;
   top: 0;
   z-index: 25;
   width: 100vw;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   gap: 2rem;
   text-transform: uppercase;
   font-weight: var(--reg);
@@ -568,6 +569,7 @@ footer.site-footer {
 @media only screen and (min-width: 550px) {
   section.wrap {padding: 0 1vw 2rem 1vw; gap: 1em 2em; grid-template-columns: 1fr;}
   header.splash{background-position: 40%;}
+  nav.topnav {flex-wrap: nowrap; justify-content: space-between;}
 }
 @media only screen and (min-width: 768px) {
   body {font-size: 1.6rem;}
